2011-02-18 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/configure_gis_map.php: Adding layer, group combo only
	displays user's groups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/configure_gis_map.php: Group combo now only displays
	user's groups.

2011-02-18 Sancho Lerena <slerena@artica.es>

        Merged bugfix from trunk.

        * operation/agentes/gis_view.php: Fixed ACL Problems in operation
        view (Was looking for PM instead AR!). Fixed search by date in data
        view for GIS data.


2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reports.php
	godmode/reporting/reporting_builder.main.php
	godmode/reporting/reporting_builder.php:Only administrator users can select and see 
	group All in this views. 

	Fix: #3183412, 3183413 

2011-02-07 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/index.php: Only display Default column to an admin
	user

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_custom_graphs.php
	godmode/reporting/graph_builder.main.php
	godmode/reporting/graphs.php: Only administrator users can select and see 
	group All in this views.
	
	Fix: #3183419, 3183421

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * operation/agentes/estado_agente.php
        godmode/alerts/configure_alert_template.php
        godmode/alerts/alert_list.builder.php: Now users can see alerts and templates
        of their groups and group "All".

2011-02-17 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/index.php: Show only user's GIS maps
	
	Fix: #3183432

2011-02-17  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_agent_status.php,
	  include/help/es/help_agent_status.php,
	  include/help/ja/help_agent_status.php: The 'no monitors' status does
	  not make sense now that all modules have a status.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>
